force-app/main/default/objects/Case_Config__c/Case_Config__c.object-meta.xml
<CustomObject>
    <label>Case Config</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Case Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Configs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>