force-app/main/default/objects/Case_Config__c/fields/Config__c.field-meta.xml
<CustomField>
    <fullName>Config__c</fullName>
    <label>Config</label>
    <referenceTo>Config__c</referenceTo>
    <relationshipLabel>Case Configs</relationshipLabel>
    <relationshipName>Case_Configs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>